<resources>
    <string name="app_name">SmartRouter</string>

    <!-- Strings related to login -->
    <string name="prompt_url">URL:192.168.1.1</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">SmartRouter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>
    <string name="error_invalid_url">Invalid URL</string>
    <string name="tjpu">TJPU</string>
    <string name="press_again_exit_app">Press again exit app</string>
    <string name="default_url">192.168.1.1</string>
    <string name="wifi_name">Connected Router: </string>
    <string name="nav_home_str">Home</string>
    <string name="nav_title_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="nav_rate">Rate</string>
    <string name="mail_subject">SmartRouter</string>
    <string name="share_text">SmartRouter, easy Android app to setting router!</string>

    <string name="banner_ad_unit_id">ca-app-pub-4297495208842373/7679198848</string>
    <!--Replace with your own ad unit id. -->
    <string name="interstitial_unit_id">ca-app-pub-4297495208842373/6062864844</string>

</resources>
