<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="@android:color/darker_gray"
              tools:context="me.xiaobailong24.smartrouter.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                card_view:cardCornerRadius="16dp"
                card_view:cardBackgroundColor="@android:color/holo_blue_dark"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/wifi_info_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/wifi_name"
                    android:textSize="20sp"/>

            </android.support.v7.widget.CardView>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <AutoCompleteTextView
                    android:id="@+id/url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_url"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/default_url"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/url_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textSize="24sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
